Search menu: First character remains in text field #112896

Closed
opened 2023-09-26 11:38:07 +02:00 by Pratik Borhade · 4 comments
Member

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 532.03

Blender Version
Broken: 4.0 (d1fbc69e03)

Short description of error
When search panel is invoked by typing a key (WM_OT_search_single_menu), that key-text is not cleared from the text field when invoked next time from f3

Exact steps for others to reproduce the error

  • Open default scene
  • Shift A + some key
  • cancel the search menu
  • Press f3 to open the search menu (notice the key-text)
**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 532.03 **Blender Version** Broken: 4.0 (d1fbc69e0331d569b1277cfe931d0ba2c9551624) **Short description of error** When search panel is invoked by typing a key (`WM_OT_search_single_menu`), that key-text is not cleared from the text field when invoked next time from `f3` **Exact steps for others to reproduce the error** - Open default scene - Shift A + some key - cancel the search menu - Press f3 to open the search menu (notice the key-text)
Pratik Borhade added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-09-26 11:38:08 +02:00
Author
Member

To fix this, maybe we can clear the string stored at g_search_text/but->poin when search menu is cancelled

To fix this, maybe we can clear the string stored at `g_search_text/but->poin` when search menu is cancelled
Author
Member

Quick fix can be:

diff --git a/source/blender/windowmanager/intern/wm_operators.cc b/source/blender/windowmanager/intern/wm_operators.cc
index 5f99638a69a..d2f1909743a 100644
--- a/source/blender/windowmanager/intern/wm_operators.cc
+++ b/source/blender/windowmanager/intern/wm_operators.cc
@@ -1856,6 +1856,8 @@ static int wm_search_menu_invoke(bContext *C, wmOperator *op, const wmEvent *eve
   }

   static SearchPopupInit_Data data{};
+  static char previous_search[256] = "";

/* Store value before copying key press data */
+  STRNCPY(previous_search, g_search_text);

   if (search_type == SEARCH_TYPE_SINGLE_MENU) {
     {
@@ -1876,6 +1878,10 @@ static int wm_search_menu_invoke(bContext *C, wmOperator *op, const wmEvent *eve

   UI_popup_block_invoke_ex(C, wm_block_search_menu, &data, nullptr, false);

+  /* g_search_text contains pressed letter here, copy the previous search value to it so
+   * it'll correctly display last searched item. */
+  STRNCPY(g_search_text, previous_search);
+
   return OPERATOR_INTERFACE;
 }

cc @JacquesLucke

Quick fix can be: ```Diff diff --git a/source/blender/windowmanager/intern/wm_operators.cc b/source/blender/windowmanager/intern/wm_operators.cc index 5f99638a69a..d2f1909743a 100644 --- a/source/blender/windowmanager/intern/wm_operators.cc +++ b/source/blender/windowmanager/intern/wm_operators.cc @@ -1856,6 +1856,8 @@ static int wm_search_menu_invoke(bContext *C, wmOperator *op, const wmEvent *eve } static SearchPopupInit_Data data{}; + static char previous_search[256] = ""; /* Store value before copying key press data */ + STRNCPY(previous_search, g_search_text); if (search_type == SEARCH_TYPE_SINGLE_MENU) { { @@ -1876,6 +1878,10 @@ static int wm_search_menu_invoke(bContext *C, wmOperator *op, const wmEvent *eve UI_popup_block_invoke_ex(C, wm_block_search_menu, &data, nullptr, false); + /* g_search_text contains pressed letter here, copy the previous search value to it so + * it'll correctly display last searched item. */ + STRNCPY(g_search_text, previous_search); + return OPERATOR_INTERFACE; } ``` cc @JacquesLucke

Maybe I should take back high prio, as this is not as annoying change in behavior as I thought

Maybe I should take back high prio, as this is not as annoying change in behavior as I thought
Richard Antalik removed the
Priority
High
label 2023-09-27 00:58:50 +02:00
Pratik Borhade self-assigned this 2023-09-27 07:39:31 +02:00
Author
Member

@iss , this breaks previous behavior when we already have previously searched operator in text field of search menu.
See video:
Submitted fix too: #112938

@iss , this breaks previous behavior when we already have previously searched operator in text field of search menu. See video: Submitted fix too: https://projects.blender.org/blender/blender/pulls/112938
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-27 12:07:23 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112896
No description provided.